--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,33 @@
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.23)
+project(crawler VERSION 0.1 LANGUAGES CXX)
 
-project(crawler LANGUAGES CXX)
+enable_testing()
 
-# Use C++17 or later
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-include_directories(inc)
+# build library from src files
+file(GLOB SRC_SOURCES "${CMAKE_SOURCE_DIR}/src/**.cpp")
+add_library(crawler_lib STATIC ${SRC_SOURCES})
 
-file(GLOB_RECURSE SRC_FILES CONFIGURE_DEPENDS src/*.cpp)
+# include your headers
+target_include_directories(crawler_lib PUBLIC
+  ${CMAKE_SOURCE_DIR}/inc
+)
 
-# Add executable
-add_executable(crawler ${SRC_FILES})
+# link dependencies into that library
+list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}")
+find_package(CURL   REQUIRED CONFIG)
+find_package(Lexbor REQUIRED)
+target_link_libraries(crawler_lib
+  PUBLIC
+    CURL::libcurl
+    lexbor::lexbor_static
+)
+
+# provide your actual executable
+add_executable(crawler_exe src/main.cpp)
+target_link_libraries(crawler_exe PRIVATE crawler_lib)
+
+# pull in the tests folder
+add_subdirectory(tests)
