--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -18,4 +18,4 @@ target_include_directories(tests PRIVATE
   ${CMAKE_CURRENT_SOURCE_DIR}/inc # test-specific headers
 )
 
-add_test(NAME all_tests COMMAND tests)
+add_test(NAME all_tests COMMAND tests --reporters=console)
