ogdf library + graph tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,24 +10,26 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 file(GLOB SRC_SOURCES "${CMAKE_SOURCE_DIR}/src/**.cpp")
 add_library(crawler_lib STATIC ${SRC_SOURCES})
 
-# include your headers
 target_include_directories(crawler_lib PUBLIC
   ${CMAKE_SOURCE_DIR}/inc
 )
 
-# link dependencies into that library
+# link curl and lexbor
 list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}")
-find_package(CURL   REQUIRED CONFIG)
+find_package(CURL REQUIRED CONFIG)
 find_package(Lexbor REQUIRED)
+find_package(OGDF REQUIRED)
+
 target_link_libraries(crawler_lib
   PUBLIC
     CURL::libcurl
     lexbor::lexbor_static
+    ogdf::ogdf
 )
 
-# provide your actual executable
+# executable
 add_executable(crawler_exe src/main.cpp)
 target_link_libraries(crawler_exe PRIVATE crawler_lib)
 
-# pull in the tests folder
+# tests
 add_subdirectory(tests)
