conan detect fix

--- a/sh/build
+++ b/sh/build
@@ -3,6 +3,9 @@
 # Exit immediately if a command fails
 set -e
 
+## Conan profile
+[ -f ~/.conan2/profiles/default ] || conan profile detect
+
 # Define the build directory name
 BUILD_DIR="build"
 
